--- a/.github/workflows/wikipedia-digest.yml
+++ b/.github/workflows/wikipedia-digest.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Run Wikipedia Biographical Digest
         env:
-          RESEND_API_KEY:   ${{ secrets.RESEND_API_KEY }}
-          DIGEST_RECIPIENT: ${{ secrets.DIGEST_RECIPIENT }}
+          GMAIL_EMAIL:        ${{ secrets.GMAIL_EMAIL }}
+          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+          DIGEST_RECIPIENT:   ${{ secrets.DIGEST_RECIPIENT }}
         run: python wikipedia_digest_email.py
